--- a/package.json
+++ b/package.json
@@ -17,7 +17,12 @@
     "@wdio/local-runner": "^7.5.0",
     "@wdio/mocha-framework": "^7.4.6",
     "@wdio/spec-reporter": "^7.4.3",
+    "babel-eslint": "^10.1.0",
     "chromedriver": "^90.0.0",
+    "eslint": "^7.24.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-wdio": "^7.4.2",
     "wdio-chromedriver-service": "^7.0.0"
   }
 }
