--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "@wdio/allure-reporter": "^7.4.2",
+    "@wdio/dot-reporter": "^7.4.2",
+    "@wdio/junit-reporter": "^7.4.2",
     "@wdio/local-runner": "^7.5.0",
     "@wdio/mocha-framework": "^7.4.6",
     "@wdio/spec-reporter": "^7.4.3",
@@ -22,6 +24,7 @@
     "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-wdio": "^7.4.2",
     "wdio-chromedriver-service": "^7.0.0"
   }
