--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@wdio/cli": "^7.5.0"
+    "@wdio/cli": "^7.5.0",
+    "wdio-geckodriver-service": "^1.1.2"
   },
   "devDependencies": {
     "@wdio/allure-reporter": "^7.4.2",
     "@wdio/dot-reporter": "^7.4.2",
+    "@wdio/firefox-profile-service": "^7.4.2",
     "@wdio/junit-reporter": "^7.4.2",
     "@wdio/local-runner": "^7.5.0",
     "@wdio/mocha-framework": "^7.4.6",
@@ -27,6 +29,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-wdio": "^7.4.2",
+    "geckodriver": "^1.22.3",
     "wdio-chromedriver-service": "^7.0.0"
   }
 }
